src/App.scss
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');

$palette-majority: #EBE2CA;
$palette-accent-first: #F7B85A;
$palette-accent-second: #CB4101 ;
$palette-accent-third: #571009;
$palette-accent-fourth: #9B200B; 

$lengthLarge1:  4rem;
$lengthLarge2: 3rem;
$lengthLarge3: 2rem;
$lengthMedium1: 1.5rem;
$lengthMedium2: 1.25rem;
$lengthMedium3: .75rem;
$lengthSmall1: .5rem;
$lengthSmall2: .375rem;
$lengthSmall3: .25rem;

$header-font-stack: 'Noto Sans', sans-serif;  ;



.App {
  width: 100vw;
}

#sidebar-main-menu{
  background-color: $palette-accent-third
}

.menu-bar-link{
  font-size: $lengthMedium3;
}
.mobile-menu-bar-link{
  font-size: $lengthMedium2;
}

h1{
  font-family: $header-font-stack;
}





.page-container-grid{
  padding-bottom: 3em;
  // background-image: radial-gradient( farthest-corner, rgba($palette-accent-first,1), rgba($palette-majority,1)) !important;

}

.App-link {
  color: #61dafb;
}


#primary-menu-bar{
  // background-image: linear-gradient( to left top,rgba($palette-accent-first,1), rgba($palette-accent-fourth,.5)); 
  background-image: linear-gradient( to left top,rgba($palette-accent-second,1), rgba($palette-accent-third,.5));

  border-radius: 0;
  // margin-bottom: .75em;
}

#shopping-cart-icon
{
  color: $palette-accent-third
}

.badge{
  color: $palette-majority;
  font-size: $lengthMedium3;
  
    padding-left: 9px;
    padding-right: 9px;
    -webkit-border-radius: 9px;
    -moz-border-radius: 9px;
    border-radius: 9px;
  }

  #shopping-cart-icon-number{
    
      font-size: 1rem;
      font-weight: bolder;
      color: $palette-accent-fourth;
      padding: 0 5px;
      vertical-align: top;
      margin-left: -25px; 
      margin-bottom: 5px;
  }

  #content-not-found-page{
   
  }

  #footer{

    // margin-top: 5vh;
    background-color: $palette-accent-third;
    color: $palette-majority;
    font-weight: bolder;
  }

  .subtext404{
   font-size: $lengthMedium3;
  }

  .itemCardHeader{
    white-space: nowrap;
    overflow-wrap: break-word;
    // max-width: 20ch;
    overflow: hidden;
    font-size:$lengthMedium3;
    text-overflow: ellipsis;
    // max-width: 15ch;
    font-family: $header-font-stack !important;
    display:inline-block;
    margin-top: .5em;
  }


  .itemCardPrice{
    font-size: $lengthMedium2;
    font-family: $header-font-stack;
    color:$palette-accent-third;
    float: right;
    text-align: right;
    padding:5%;
 
    margin-top: .5em;

  }

  .itemCard{
    height:100%;
    display: grid;
    grid-template-rows: 1fr max-content;
    border-radius: 5%;
    box-shadow: 10px 5px 5px rgba($palette-accent-fourth,.125);
    background-color: white;
    
    // background: red;
  }
  .itemCardMaterials{
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    margin-top: .5em;
  }
  .itemCardMaterialsButton{
    display: inline-block;
    text-align:center;
    line-height: .75;
    border-radius:50%; 
    width:2.5ch;
    height:2.5ch;
    margin: 1em;
    border-color:black;
    border-style:solid;
    border-width: thin;

  }




  .itemCardContent{
    width: 100%;
    padding: 10%;
  }
  .itemCardImageContainer{
    width: 100%;
    height: 100px;
    display:flex;
    justify-content: center;
    align-items: center;


    margin-left: auto;
    margin-right: auto;
    border-radius: 5% 5% 0 0;

    
  }

  .itemImage{
    // width:20%;
    // display:block;
    max-height:100px;
    max-width: 100px;
    // width:auto;
    // text-align: center;
    line-height: normal;
    
    // margin-left:auto;
    // margin-right:auto;
    
    // height:50px;
    // width:50px;
    // height:100%;
    // object-fit: contain

  }

  .card{
    box-shadow: none !important;
  }

  .homepageCategoryCard{
    // height:100%;
    box-shadow: 10px 5px 5px rgba($palette-accent-fourth,.15);
    border-radius: 5%;


    display: grid;
    grid-template-rows: 1fr max-content;
    height: 20vh;
    width:auto;
    font-family: $header-font-stack;
    color:white;
  }

  .column:nth-child(even) .itemCardImageContainer{
    background-image: linear-gradient( to left top,rgba($palette-accent-second,1), rgba($palette-accent-third,1));

  }
   .column:nth-child(odd) .itemCardImageContainer{
    background-image: linear-gradient( to left top,rgba($palette-accent-third,1), rgba($palette-accent-fourth,1));

  }

  .column:nth-child(3n+3) .itemCardImageContainer{
    background-image: linear-gradient( to left top,rgba($palette-accent-fourth,1), rgba($palette-accent-first,1));
  }

.homepage-categories .column:nth-child(even) .homepageCategoryCard{
  // background-image: linear-gradient( to left top,rgba($palette-accent-fourth,1), rgba($palette-accent-first,1));
  // background-image:url("https://miro.medium.com/max/1400/1*doaM-B5h4HFMeMHaRTEfdQ.jpeg");
  background-color: rgba($palette-accent-second,.75);
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: 100% 100%;}
.homepage-categories .column:nth-child(odd) .homepageCategoryCard{
  // background-image: linear-gradient( to left top,rgba($palette-accent-fourth,1), rgba($palette-accent-first,1));
  // background-image:url("https://miro.medium.com/max/1400/1*doaM-B5h4HFMeMHaRTEfdQ.jpeg");
  background-color: rgba($palette-accent-fourth,.75);
  // background-color: white;
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: 100% 100%;
}
.homepage-categories .column:nth-child(3n+3) .homepageCategoryCard{
  // background-image: linear-gradient( to left top,rgba($palette-accent-fourth,1), rgba($palette-accent-first,1));
  // background-image:url("https://miro.medium.com/max/1400/1*doaM-B5h4HFMeMHaRTEfdQ.jpeg");
  background-color:rgba( $palette-accent-first,.75);
  background-blend-mode: multiply;
  background-repeat: no-repeat;
  background-size: 100% 100%;}
  

  #homepage-hero{
    // background-image: url(https://images.nappy.co/uploads/large/81596240559elidpvwvuisi8su7074mbcw2gk2svuemo3xrzmiryjit7qdugi7pozovzactyb5xdwbab7ijtcx54lpk5gtkrv0lc5yke4jtj5fp.jpg?auto=format&fm=jpg&w=1280&q=75);
    // background-size: 50% 100%;
    // background-color:rgba( $palette-accent-second,.75);
    // background-blend-mode: overlay;
    // background-repeat: no-repeat;
    // background-position: 100% 0;

    // background:  url(https://images.nappy.co/uploads/large/81596240559elidpvwvuisi8su7074mbcw2gk2svuemo3xrzmiryjit7qdugi7pozovzactyb5xdwbab7ijtcx54lpk5gtkrv0lc5yke4jtj5fp.jpg?auto=format&fm=jpg&w=1280&q=75), linear-gradient( to right, rgba( $palette-accent-second,.75), rgba( $palette-accent-second,.5)) ;
    // background-size: 40% 200%, 100%;
    // // background-color:rgba( $palette-accent-second,.75);
    // background-blend-mode: multiply;
    // background-repeat: no-repeat;
    // background-position: 100% 0, center;


    //this is for having center background, and 1 grid column
    background:  url(http://localhost:3001/images/homepage/transparent%20Hero.png), linear-gradient( to right, rgba( $palette-accent-second,.8), rgba( $palette-accent-second,.9)) ;
    background-size: 40% 200%, 100%;
    // background-color:rgba( $palette-accent-second,.75);
    background-blend-mode: multiply;
    background-repeat: no-repeat;
    background-position: 50% 0, center;
    text-align:center;



  }

  

  .homepage-hero-text-container{
    height:100%;
    display: grid;
    grid-template-rows: 1fr max-content;
    padding: 2em;
  }

  #homepage-hero-header{
    color: $palette-majority;
    font-size: $lengthLarge2;
    font-family: $header-font-stack;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
  
    padding:.5em;    

    text-overflow: ellipsis;
    overflow-wrap:anywhere;
    overflow: hidden;
  }
  .homepage-custom-banner-text{
    color: $palette-majority;
    font-size: $lengthMedium2;
    font-family: $header-font-stack;
    overflow-wrap:break-word;
    overflow: hidden;
  }

  

  #homepage-hero-small-text{
    color: $palette-majority;
    font-size: $lengthMedium2;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
    margin-top: .5em;
    margin-bottom: .5em;
    background-color: rgba($palette-accent-second,.1)
  }

  #homepage-custom-banner{
    background-image: url(https://burst.shopifycdn.com/photos/mens-watch-and-ring.jpg?width=500&format=pjpg&exif=0&iptc=0);
    background-color: rgba($palette-accent-third,.75);
    background-size: 100% auto;
    background-position: 0 45%;
    background-repeat: no-repeat;
    background-blend-mode: multiply;
  }

  #log-in-register-grid{
    height: 80vh;
    margin-left: 0 !important;
    margin-right: 0!important;
    text-align: center;
    background-image: radial-gradient( farthest-corner, rgba($palette-accent-first,1), rgba($palette-majority,1));

  }

  #log-in-register-column{
    max-width: 450px;
    // background-image: linear-gradient( to left top,rgba($palette-accent-second,1), rgba($palette-accent-third,1));
  }
  .log-in-register-form{
        background-image: radial-gradient( farthest-corner, rgba($palette-accent-third,1), rgba($palette-accent-fourth,1)) !important;
      border-radius: 5%;
      padding: 5%;
      box-shadow: 20px 20px 5px rgba($palette-accent-fourth,.15);
  }
  .log-in-register-form .field>label{
    font-family: $header-font-stack !important;
    color: $palette-majority!important;
    
  }

  #items-page-main{
    height: 300px;
  }

  #items-thumbnail-image-container{
    max-height: 100px;

  }

  .items-thumbnail-image{
    height: 40px;
  }

  .shopping-cart-item{
    background: $palette-majority;
  }
  .shopping-cart-image{
    max-height: 80px;
    
    
  }

  .shopping-cart-item-name{
    padding-top: .5em;
    margin-right: .5em;

    white-space: nowrap;
    overflow-wrap: break-word;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size:$lengthMedium3;
    font-family: $header-font-stack !important;

  }

  .shopping-cart-item-price{
    
      font-size: $lengthMedium2;
      font-family: $header-font-stack;
      color:$palette-accent-third;
      float: right;
      text-align: right;
      

  }
  


  // .column:nth-child(3n+1) > .itemCard > div > a> img{
  //   // background-color: $palette-accent-second;
  //   background-image: linear-gradient( to left top,rgba($palette-accent-second,1), rgba($palette-accent-third,1)); 
  // }
  // .column:nth-child(3n+2) > .itemCard > div > a> img{
  //   // background-color: $palette-accent-third;
  //   background-image: linear-gradient( to left top,rgba($palette-accent-third,1), rgba($palette-accent-fourth,1));
  // }

  // .column:nth-child(3n+3) > .itemCard > div > a> img{
  //   // background-color: $palette-accent-fourth;
  //   background-image: linear-gradient( to left top,rgba($palette-accent-fourth,1), rgba($palette-accent-first,1));
  // }


  a:link {
    color: $palette-accent-fourth
  }

  A:visited{
    color: $palette-accent-second
  }

